# HLS-lab1

./: .gitignore  CMakeLists.txt  Clarification.md  Description.md  README.md  shell.nix
cases/: .#test_case1.txt  example.cpp  example.ll  example.txt  resource_lib.json  test.sh  test_case1.cpp  test_case1.ll  test_case1.txt  test_case10.cpp  test_case10.ll  test_case10.txt  test_case10_area.txt  test_case10_baseline.txt  test_case1_area.txt  test_case1_baseline.txt  test_case1_out.txt  test_case2.cpp  test_case2.ll  test_case2.txt  test_case2_area.txt  test_case2_baseline.txt  test_case3.cpp  test_case3.ll  test_case3.txt  test_case3_area.txt  test_case3_baseline.txt  test_case4.cpp  test_case4.ll  test_case4.txt  test_case4_area.txt  test_case4_baseline.txt  test_case5.cpp  test_case5.ll  test_case5.txt  test_case5_area.txt  test_case5_baseline.txt  test_case6.cpp  test_case6.ll  test_case6.txt  (+17 more)
include/: CDFG.h  ResourceLib.h  Verifier.h
src/: CMakeLists.txt  Checker.cpp  InputGen.cpp  Verifier.cpp  score_calc.cpp
test/: example.cpp  example.ll  gen_script.sh  resource_lib.json  test_in1.txt  test_out1.txt
